# http-ssh.rfc

./: .gitignore  Cargo.toml  ExecThingy.rs  ExecThingy_2.rs  README.md  lobby.rs  message.rs  startConn.rs  webSocketNeo.rs  webSocmain.rs
backend/: Cargo.toml
backend/src/: lobby.rs  main.rs  message.rs  startConn.rs  webSocketNeo.rs  webSocmain.rs
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AutoComplete.css  AutoComplete.js  FileExplorer.css  FileExplorer.js
frontend/src/services/: AutoCompleteService.js  WebSocketService.js
src/: main.rs
