[package]
name = "http-ssh-rfc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "webSocmain.rs"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }